# e2e5Gmbs

./: .gitignore  README.md
OCUDU-gNB/apps/: CMakeLists.txt
OCUDU-gNB/apps/cu/: CMakeLists.txt  cu.cpp  cu_appconfig.h  cu_appconfig_cli11_schema.cpp  cu_appconfig_cli11_schema.h  cu_appconfig_validator.cpp  cu_appconfig_validator.h  cu_appconfig_yaml_writer.cpp  cu_appconfig_yaml_writer.h
OCUDU-gNB/apps/cu_cp/: CMakeLists.txt  cu_cp.cpp  cu_cp_appconfig.h  cu_cp_appconfig_cli11_schema.cpp  cu_cp_appconfig_cli11_schema.h  cu_cp_appconfig_yaml_writer.cpp  cu_cp_appconfig_yaml_writer.h
OCUDU-gNB/apps/cu_up/: CMakeLists.txt  cu_up.cpp  cu_up_appconfig.h  cu_up_appconfig_cli11_schema.cpp  cu_up_appconfig_cli11_schema.h  cu_up_appconfig_validator.cpp  cu_up_appconfig_validator.h  cu_up_appconfig_yaml_writer.cpp  cu_up_appconfig_yaml_writer.h
OCUDU-gNB/apps/du/: CMakeLists.txt  du.cpp  du_appconfig.h  du_appconfig_cli11_schema.cpp  du_appconfig_cli11_schema.h  du_appconfig_translators.cpp  du_appconfig_translators.h  du_appconfig_validators.cpp  du_appconfig_validators.h  du_appconfig_yaml_writer.cpp  du_appconfig_yaml_writer.h
OCUDU-gNB/apps/du_low/: CMakeLists.txt  du_low.cpp  du_low_appconfig.h  du_low_appconfig_cli11_schema.cpp  du_low_appconfig_cli11_schema.h  du_low_appconfig_translators.cpp  du_low_appconfig_translators.h  du_low_appconfig_validators.cpp  du_low_appconfig_validators.h  du_low_appconfig_yaml_writer.cpp  du_low_appconfig_yaml_writer.h
OCUDU-gNB/apps/examples/: CMakeLists.txt
OCUDU-gNB/apps/gnb/: CMakeLists.txt  gnb.cpp  gnb_appconfig.h  gnb_appconfig_cli11_schema.cpp  gnb_appconfig_cli11_schema.h  gnb_appconfig_translators.cpp  gnb_appconfig_translators.h  gnb_appconfig_validators.cpp  gnb_appconfig_validators.h  gnb_appconfig_yaml_writer.cpp  gnb_appconfig_yaml_writer.h
OCUDU-gNB/apps/helpers/: CMakeLists.txt
OCUDU-gNB/apps/services/: CMakeLists.txt  application_message_banners.h  application_tracer.h
OCUDU-gNB/apps/units/: CMakeLists.txt  application_unit.h  application_unit_commands.h
OCUDU-gNB/configs/: CMakeLists.txt  amf.yml  amf_sctp_multihoming.yml  cell_cfg_max_128_ues.yml  cell_cfg_max_256_ues.yml  cell_cfg_max_32_ues.yml  cell_cfg_max_512_ues.yml  cell_cfg_max_64_ues.yml  cell_cfg_pucch_narrow_bw.yml  cu.yml  cu_cp.yml  cu_up.yml  cu_up_f1u_multiple_sockets.yml  debug.yml  du_f1u_multiple_sockets.yml  du_rf_b200_tdd_n78_20mhz.yml  geo_ntn.yml  gnb_custom_cell_properties.yml  gnb_rf_b200_tdd_n78_20mhz.yml  gnb_rf_b210_fdd_srsUE.yml  gnb_rf_n310_fdd_n3_20mhz.yml  gnb_ru_picocom_scb_tdd_n78_20mhz.yml  gnb_ru_ran550_tdd_n78_100mhz_4x2.yml  gnb_ru_rpqn4800e_tdd_n78_20mhz_2x2.yml  low_latency.yml  mimo_usrp.yml  mobility.yml  ngu_multiple_sockets.yml  qos.yml  readme.md  sibs.yml  slicing.yml  srb.yml  testmode.yml
OCUDU-gNB/lib/cu_cp/: CMakeLists.txt  README.md  cu_configurator_impl.cpp  cu_configurator_impl.h  cu_cp_executor_mapper.cpp  cu_cp_factory.cpp  cu_cp_impl.cpp  cu_cp_impl.h  cu_cp_impl_interface.h  log_format.h  ngap_repository.cpp  ngap_repository.h  o_cu_cp_factory.cpp  o_cu_cp_impl.cpp  o_cu_cp_impl.h  xnap_repository.cpp  xnap_repository.h
OCUDU-gNB/lib/cu_up/: CMakeLists.txt  README.md  cu_up_executor_mapper.cpp  cu_up_factory.cpp  cu_up_impl.cpp  cu_up_impl.h  cu_up_manager_helpers.h  cu_up_manager_impl.cpp  cu_up_manager_impl.h  cu_up_ue_logger.h  drb_context.h  ngu_session_manager.h  ngu_session_manager_impl.cpp  ngu_session_manager_impl.h  o_cu_up_factory.cpp  o_cu_up_impl.cpp  o_cu_up_impl.h  pdu_session.h  pdu_session_manager.h  pdu_session_manager_impl.cpp  pdu_session_manager_impl.h  qos_flow_context.h  ue_context.h  ue_manager.cpp  ue_manager.h  ue_manager_interfaces.h
OCUDU-gNB/lib/du/: CMakeLists.txt  README.md  du.png.license  du_cell_config_validation.cpp  du_update_config_helpers.cpp  o_du_factory.cpp  o_du_impl.cpp  o_du_impl.h
OCUDU-gNB/lib/f1ap/: CMakeLists.txt  asn1_helpers.cpp  asn1_helpers.h  f1ap_asn1_packer.cpp  f1ap_asn1_packer.h  f1ap_asn1_utils.h  f1ap_common_messages.cpp  f1ap_common_messages.h  log_helpers.cpp  log_helpers.h  proc_logger.h
OCUDU-gNB/lib/f1u/: CMakeLists.txt
OCUDU-gNB/lib/fapi_adaptor/: CMakeLists.txt  precoding_matrix_mapper.cpp  precoding_matrix_mapper_functions.h  precoding_matrix_repository.cpp  precoding_matrix_repository_builder.h  precoding_matrix_table_generator.cpp  uci_part2_correspondence_generator.cpp  uci_part2_correspondence_mapper.cpp  uci_part2_correspondence_repository.cpp  uci_part2_mapper_functions.h
OCUDU-gNB/lib/gateways/: CMakeLists.txt  sctp_network_client_factory.cpp  sctp_network_client_impl.cpp  sctp_network_client_impl.h  sctp_network_gateway_common_impl.h  sctp_network_server_factory.cpp  sctp_network_server_impl.cpp  sctp_network_server_impl.h  sctp_socket.cpp  udp_network_gateway_factory.cpp  udp_network_gateway_impl.cpp  udp_network_gateway_impl.h
OCUDU-gNB/lib/gtpu/: CMakeLists.txt  gtpu_demux_factory.cpp  gtpu_demux_impl.cpp  gtpu_demux_impl.h  gtpu_echo_factory.cpp  gtpu_echo_impl.h  gtpu_echo_rx_impl.h  gtpu_echo_tx_impl.h  gtpu_gateway.cpp  gtpu_pdu.cpp  gtpu_pdu.h  gtpu_teid_pool_factory.cpp  gtpu_teid_pool_impl.h  gtpu_tunnel_base_rx.h  gtpu_tunnel_base_tx.h  gtpu_tunnel_impl_ngu.h  gtpu_tunnel_impl_nru.h  gtpu_tunnel_logger.h  gtpu_tunnel_ngu_factory.cpp  gtpu_tunnel_ngu_rx_impl.h  gtpu_tunnel_ngu_tx_impl.h  gtpu_tunnel_nru_factory.cpp  gtpu_tunnel_nru_rx_impl.h  gtpu_tunnel_nru_tx_impl.h
OCUDU-gNB/lib/instrumentation/: CMakeLists.txt
OCUDU-gNB/lib/mac/: CMakeLists.txt  README.md  mac_config_interfaces.h  mac_factory.cpp  mac_impl.cpp  mac_impl.h  rnti_manager.h  rnti_value_table.h
OCUDU-gNB/lib/ngap/: CMakeLists.txt  log_helpers.cpp  log_helpers.h  ngap_asn1_converters.h  ngap_asn1_helpers.h  ngap_asn1_packer.cpp  ngap_asn1_packer.h  ngap_asn1_utils.cpp  ngap_asn1_utils.h  ngap_asn1_validators.h  ngap_factory.cpp  (+5 more)
oai-ue/common/: 5g_platform_types.h  CMakeLists.txt  cmake_defs.h.in  instrumentation.h  ngran_types.h  oai_version.h.in  openairinterface5g_limits.h  platform_constants.h  platform_types.h  ran_context.h
(+8514 files in other folders)
