# SPDX-FileCopyrightText: Copyright (C) 2021-2026 Software Radio Systems Limited
# SPDX-License-Identifier: BSD-3-Clause-Open-MPI
# Portions of this file may implement 3GPP specifications, which may be subject to additional licensing requirements.


add_subdirectory(generic_functions)
add_subdirectory(lower)
add_subdirectory(metrics)
add_subdirectory(support)
add_subdirectory(upper)
